--- a/index.html
+++ b/index.html
@@ -1,1 +1,51 @@
-<!DOCTYPE html><html><head><title>Calculator Project</title><meta name="viewport" content="width=device-width, initial-scale=1"><meta charset="UTF-8"><link rel="stylesheet" href="/csb-onc5v9/styles.f123ff01.css"></head><body> <div id="container"> <div id="text"> <h3>CALCULATOR</h3> </div> <div id="screen"></div> <div id="btn-container"> <div class="row"> <button type="button" class="btn" data-value="AC">AC</button> <button type="button" class="btn" data-value="+/-">+/-</button> <button type="button" class="btn" data-value="%">%</button> <button type="button" class="btn operator" data-value="/">/</button> </div> <div class="row"> <button type="button" class="btn" data-value="7">7</button> <button type="button" class="btn" data-value="8">8</button> <button type="button" class="btn" data-value="9">9</button> <button type="button" class="btn operator" data-value="*">*</button> </div> <div class="row"> <button type="button" class="btn" data-value="4">4</button> <button type="button" class="btn" data-value="5">5</button> <button type="button" class="btn" data-value="6">6</button> <button type="button" class="btn operator" data-value="-">-</button> </div> <div class="row"> <button type="button" class="btn" data-value="1">1</button> <button type="button" class="btn" data-value="2">2</button> <button type="button" class="btn" data-value="3">3</button> <button type="button" class="btn operator" data-value="+">+</button> </div> <div class="row"> <button type="button" id="zero" class="btn" data-value="0">0</button> <button type="button" class="btn" data-value=".">.</button> <button type="button" class="btn operator" data-value="=">=</button> </div> </div> </div> <p id="copyright">Copyright © CHIRAG RAJ</p> <script src="/csb-onc5v9/source.16780fd8.js"></script> </body></html>
+<!DOCTYPE html>
+<html>
+  <head>
+    <title>Calculator Project</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta charset="UTF-8" />
+    <link rel="stylesheet" href="styles.css" />
+  </head>
+
+  <body>
+    <div id="container">
+      <div id="text">
+        <h3>CALCULATOR</h3>
+      </div>
+      <div id="screen"></div>
+      <div id="btn-container">
+        <div class="row">
+          <button type="button" class="btn" data-value="AC">AC</button>
+          <button type="button" class="btn" data-value="+/-">+/-</button>
+          <button type="button" class="btn" data-value="%">%</button>
+          <button type="button" class="btn operator" data-value="/">/</button>
+        </div>
+        <div class="row">
+          <button type="button" class="btn" data-value="7">7</button>
+          <button type="button" class="btn" data-value="8">8</button>
+          <button type="button" class="btn" data-value="9">9</button>
+          <button type="button" class="btn operator" data-value="*">*</button>
+        </div>
+        <div class="row">
+          <button type="button" class="btn" data-value="4">4</button>
+          <button type="button" class="btn" data-value="5">5</button>
+          <button type="button" class="btn" data-value="6">6</button>
+          <button type="button" class="btn operator" data-value="-">-</button>
+        </div>
+        <div class="row">
+          <button type="button" class="btn" data-value="1">1</button>
+          <button type="button" class="btn" data-value="2">2</button>
+          <button type="button" class="btn" data-value="3">3</button>
+          <button type="button" class="btn operator" data-value="+">+</button>
+        </div>
+        <div class="row">
+          <button type="button" id="zero" class="btn" data-value="0">0</button>
+          <button type="button" class="btn" data-value=".">.</button>
+          <button type="button" class="btn operator" data-value="=">=</button>
+        </div>
+      </div>
+    </div>
+    <p id="copyright">Copyright © CHIRAG RAJ</p>
+    <script src="index.js"></script>
+  </body>
+</html>
